# vn-aio-atlas

./: .env.example  .gitignore  CHANGELOG.md  FINDINGS.md  LICENSE  PLANNING.md  README.md  pyproject.toml
dashboard/: STYLEGUIDE.md  package-lock.json  package.json
dashboard/scripts/: deploy.mjs
dashboard/src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
dashboard/src/components/: AtlasFooter.tsx  CiteButton.tsx  FindingAnalysis.tsx  FindingCard.tsx  Glossary.tsx  KeyTakeaways.tsx  Monogram.tsx  ReadingProgress.tsx  SectionDivider.tsx  SectionMap.tsx  Sidebar.tsx  StickyHeader.tsx  StudyClosing.tsx
dashboard/src/components/charts/: BarChartH.tsx  BarChartV.tsx  ChartFigure.tsx  Heatmap.tsx  LineChart.tsx  MiniBars.tsx  RatioBar.tsx  Sparkline.tsx
dashboard/src/components/charts/visx/: BarH.tsx  BarV.tsx  Line.tsx
dashboard/src/components/ui/: Button.tsx  Card.tsx  DataRow.tsx  EmptyState.tsx  ErrorState.tsx  Eyebrow.tsx  Icon.tsx  Num.tsx  SegmentedToggle.tsx  Select.tsx  Skeleton.tsx  Stat.tsx
dashboard/src/lib/: chartTheme.ts  db.ts  findingAnalysis.tsx  i18n.ts
report/: REPORT.md  REPORT_vi.md
scripts/: fix_has_price.py  inspect_unknowns.py  run_clean.py  run_findings.py  run_load.py  run_pull.py
sql/: 01_schema.sql
src/atlas/: clean.py  config.py  db.py  findings.py  load.py  pull.py
